# xgame

./: .gitignore  CMakeLists.txt
assets/shaders/: cube.fs  light.fs  light.vs
include/core/: Components.h  EntityManager.h  Logger.h  camera.h
include/systems/: CollisionSystem.h  MovementSystem.h  PhysicsSystem.h  RenderSystem.h
include/utils/: ShaderProgram.h  TextureProgram.h
src/: main.cpp
src/utils/: ShaderProgram.cpp  TextureProgram.cpp
